--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,13 @@
-<html>
-    <head>
-        <title>blog</title>
-    </head>
-    <body>
-    	<div>
-		    <h1><a href="/">Blog</a></h1>
-		</div>
+{% extends 'blog/base.html' %}
 
-		{% for post in posts %}
-		    <div>
-		        <h1><a href="">{{ post.title }}</a></h1>
-		        <p><i>published: {{ post.published_date }}</i></p>
-		        <p>{{ post.text|linebreaksbr }}</p>
-		    </div>
-		{% endfor %}
-    </body>
-</html>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
